; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_relocate.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_relocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compat_baton = type { i8*, i32 }

@compat_validator = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_wc_relocate(i8* %0, i32* %1, i8* %2, i8* %3, i32 %4, i32 %5, i8* %6, i32* %7) #0 {
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca %struct.compat_baton, align 8
  store i8* %0, i8** %9, align 8
  store i32* %1, i32** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i32* %7, i32** %16, align 8
  %18 = load i32, i32* %14, align 4
  %19 = getelementptr inbounds %struct.compat_baton, %struct.compat_baton* %17, i32 0, i32 1
  store i32 %18, i32* %19, align 8
  %20 = load i8*, i8** %15, align 8
  %21 = getelementptr inbounds %struct.compat_baton, %struct.compat_baton* %17, i32 0, i32 0
  store i8* %20, i8** %21, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = load i8*, i8** %11, align 8
  %25 = load i8*, i8** %12, align 8
  %26 = load i32, i32* %13, align 4
  %27 = load i32, i32* @compat_validator, align 4
  %28 = load i32*, i32** %16, align 8
  %29 = call i32* @svn_wc_relocate3(i8* %22, i32* %23, i8* %24, i8* %25, i32 %26, i32 %27, %struct.compat_baton* %17, i32* %28)
  ret i32* %29
}

declare dso_local i32* @svn_wc_relocate3(i8*, i32*, i8*, i8*, i32, i32, %struct.compat_baton*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
